--- a/ui_files/universities_access_db.ui
+++ b/ui_files/universities_access_db.ui
@@ -122,6 +122,19 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QPushButton" name="shutdown_db_button">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>260</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Shutdown Database</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -129,7 +142,7 @@
      <x>0</x>
      <y>0</y>
      <width>508</width>
-     <height>24</height>
+     <height>37</height>
     </rect>
    </property>
   </widget>
