--- a/ui_files/search.ui
+++ b/ui_files/search.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>512</width>
-    <height>293</height>
+    <height>341</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>220</y>
+      <y>260</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -27,25 +27,25 @@
      <string>Shutdown Database</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="filter_uni_button">
+   <widget class="QPushButton" name="search_name_button">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>40</y>
-      <width>151</width>
+      <x>30</x>
+      <y>80</y>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Filter Universities</string>
+     <string>Search by Name</string>
     </property>
    </widget>
    <widget class="QPushButton" name="search_loc_button">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>150</y>
-      <width>151</width>
+      <x>270</x>
+      <y>190</y>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
@@ -56,9 +56,9 @@
    <widget class="QPushButton" name="search_review_button">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>150</y>
-      <width>151</width>
+      <x>110</x>
+      <y>190</y>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>110</y>
+      <y>150</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -83,7 +83,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>110</y>
+      <y>150</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -96,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>110</y>
+      <y>150</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -105,25 +105,25 @@
      <string>View Clubs</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="search_name_button">
+   <widget class="QPushButton" name="filter_uni_button">
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>40</y>
+      <y>80</y>
       <width>151</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Search by Name</string>
+     <string>Filter Universities</string>
     </property>
    </widget>
    <widget class="QPushButton" name="search_code_button">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>40</y>
-      <width>151</width>
+      <x>350</x>
+      <y>80</y>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
@@ -160,7 +160,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>70</y>
+      <y>110</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -185,13 +185,33 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>220</y>
+      <y>260</y>
       <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Go Back</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="name_box">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>40</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="code_box">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>40</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
