--- a/ui_files/search_or_watchlist.ui
+++ b/ui_files/search_or_watchlist.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Search Universities</string>
+     <string>Search</string>
     </property>
    </widget>
    <widget class="QPushButton" name="watchlist_button">
@@ -53,6 +53,19 @@
      <string>Shutdown Database</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="review_button">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>110</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Write Review</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -60,7 +73,7 @@
      <x>0</x>
      <y>0</y>
      <width>298</width>
-     <height>24</height>
+     <height>37</height>
     </rect>
    </property>
   </widget>
