--- a/ui_files/edit_notes.ui
+++ b/ui_files/edit_notes.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
+    <width>483</width>
     <height>373</height>
    </rect>
   </property>
@@ -14,58 +14,43 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="add_uni_button">
+   <widget class="QPushButton" name="shutdown_db_button">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>240</y>
-      <width>131</width>
+      <x>330</x>
+      <y>300</y>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Add University</string>
+     <string>Shutdown Database</string>
     </property>
    </widget>
    <widget class="QTextEdit" name="name_box">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>90</x>
       <y>60</y>
       <width>111</width>
       <height>31</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="add_watchlist_label">
+   <widget class="QTextEdit" name="notes_box">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>0</y>
-      <width>191</width>
-      <height>41</height>
+      <x>90</x>
+      <y>110</y>
+      <width>371</width>
+      <height>111</height>
      </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>.AppleSystemUIFont</family>
-      <pointsize>20</pointsize>
-      <weight>75</weight>
-      <italic>false</italic>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Add to Watchlist</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="name_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>20</x>
       <y>60</y>
       <width>61</width>
       <height>31</height>
@@ -90,7 +75,7 @@
    <widget class="QLabel" name="notes_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>20</x>
       <y>110</y>
       <width>61</width>
       <height>31</height>
@@ -112,16 +97,6 @@
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QTextEdit" name="notes_box">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>110</y>
-      <width>371</width>
-      <height>111</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="back_button">
     <property name="geometry">
      <rect>
@@ -135,17 +110,42 @@
      <string>Go Back</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="shutdown_db_button">
+   <widget class="QPushButton" name="edit_notes_button">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>300</y>
-      <width>151</width>
+      <x>180</x>
+      <y>240</y>
+      <width>111</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Shutdown Database</string>
+     <string>Edit</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="add_watchlist_label">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>0</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>.AppleSystemUIFont</family>
+      <pointsize>20</pointsize>
+      <weight>75</weight>
+      <italic>false</italic>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Edit Notes:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
@@ -154,7 +154,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>463</width>
+     <width>483</width>
      <height>24</height>
     </rect>
    </property>
