--- a/ui_files/locations.ui
+++ b/ui_files/locations.ui
@@ -6,43 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
-    <height>373</height>
+    <width>222</width>
+    <height>295</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="add_uni_button">
+   <widget class="QLabel" name="universities_label">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>240</y>
-      <width>131</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Add University</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="name_box">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>60</y>
-      <width>111</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="add_watchlist_label">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
+      <x>60</x>
       <y>0</y>
-      <width>191</width>
+      <width>101</width>
       <height>41</height>
      </rect>
     </property>
@@ -56,18 +33,18 @@
      </font>
     </property>
     <property name="text">
-     <string>Add to Watchlist</string>
+     <string>Locations</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="name_label">
+   <widget class="QLabel" name="fee_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>60</y>
-      <width>61</width>
+      <x>20</x>
+      <y>50</y>
+      <width>51</width>
       <height>31</height>
      </rect>
     </property>
@@ -81,18 +58,52 @@
      </font>
     </property>
     <property name="text">
-     <string>Name:</string>
+     <string>City:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="notes_label">
+   <widget class="QTextEdit" name="city_box">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>110</y>
-      <width>61</width>
+      <x>90</x>
+      <y>50</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="state_box">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>100</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="fee_label_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>100</y>
+      <width>51</width>
       <height>31</height>
      </rect>
     </property>
@@ -106,27 +117,37 @@
      </font>
     </property>
     <property name="text">
-     <string>Notes:</string>
+     <string>State:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QTextEdit" name="notes_box">
+   <widget class="QPushButton" name="search_button">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>110</y>
-      <width>371</width>
-      <height>111</height>
+      <x>70</x>
+      <y>150</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>SEARCH</string>
     </property>
    </widget>
    <widget class="QPushButton" name="back_button">
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>300</y>
+      <y>190</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -138,8 +159,8 @@
    <widget class="QPushButton" name="shutdown_db_button">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>300</y>
+      <x>0</x>
+      <y>220</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -154,7 +175,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>463</width>
+     <width>222</width>
      <height>24</height>
     </rect>
    </property>
