--- a/ui_files/remove_from_watchlist.ui
+++ b/ui_files/remove_from_watchlist.ui
@@ -6,60 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
-    <height>373</height>
+    <width>331</width>
+    <height>232</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="add_uni_button">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>240</y>
-      <width>131</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Add University</string>
-    </property>
-   </widget>
    <widget class="QTextEdit" name="name_box">
     <property name="geometry">
      <rect>
       <x>80</x>
       <y>60</y>
-      <width>111</width>
+      <width>241</width>
       <height>31</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="add_watchlist_label">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>0</y>
-      <width>191</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>.AppleSystemUIFont</family>
-      <pointsize>20</pointsize>
-      <weight>75</weight>
-      <italic>false</italic>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Add to Watchlist</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="name_label">
@@ -87,46 +49,36 @@
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="notes_label">
+   <widget class="QLabel" name="add_watchlist_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>110</y>
-      <width>61</width>
-      <height>31</height>
+      <x>50</x>
+      <y>0</y>
+      <width>231</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>.AppleSystemUIFont</family>
-      <pointsize>16</pointsize>
+      <pointsize>20</pointsize>
       <weight>75</weight>
       <italic>false</italic>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
-     <string>Notes:</string>
+     <string>Remove from Watchlist</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="notes_box">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>110</y>
-      <width>371</width>
-      <height>111</height>
-     </rect>
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="back_button">
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>300</y>
+      <y>160</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -138,14 +90,27 @@
    <widget class="QPushButton" name="shutdown_db_button">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>300</y>
-      <width>151</width>
+      <x>170</x>
+      <y>160</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Shutdown Database</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="remove_button">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>100</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Remove</string>
     </property>
    </widget>
   </widget>
@@ -154,7 +119,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>463</width>
+     <width>331</width>
      <height>24</height>
     </rect>
    </property>
