--- a/ui_files/reviews.ui
+++ b/ui_files/reviews.ui
@@ -6,43 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
-    <height>373</height>
+    <width>222</width>
+    <height>245</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="add_uni_button">
+   <widget class="QLabel" name="universities_label">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>240</y>
-      <width>131</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Add University</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="name_box">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>60</y>
-      <width>111</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="add_watchlist_label">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
+      <x>60</x>
       <y>0</y>
-      <width>191</width>
+      <width>101</width>
       <height>41</height>
      </rect>
     </property>
@@ -56,18 +33,18 @@
      </font>
     </property>
     <property name="text">
-     <string>Add to Watchlist</string>
+     <string>Reviews</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="name_label">
+   <widget class="QLabel" name="fee_label_2">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
-      <width>61</width>
+      <y>50</y>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
@@ -81,52 +58,47 @@
      </font>
     </property>
     <property name="text">
-     <string>Name:</string>
+     <string>Star Rating:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="notes_label">
+   <widget class="QSpinBox" name="rating_box">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>110</y>
-      <width>61</width>
+      <x>120</x>
+      <y>50</y>
+      <width>51</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="search_button">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>90</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>.AppleSystemUIFont</family>
-      <pointsize>16</pointsize>
+      <pointsize>14</pointsize>
       <weight>75</weight>
-      <italic>false</italic>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
-     <string>Notes:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="notes_box">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>110</y>
-      <width>371</width>
-      <height>111</height>
-     </rect>
+     <string>SEARCH</string>
     </property>
    </widget>
    <widget class="QPushButton" name="back_button">
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>300</y>
+      <y>140</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -138,8 +110,8 @@
    <widget class="QPushButton" name="shutdown_db_button">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>300</y>
+      <x>0</x>
+      <y>170</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -154,7 +126,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>463</width>
+     <width>222</width>
      <height>24</height>
     </rect>
    </property>
